# photo-bomb

./: .gitignore  README.md  README_DOCS_LINK.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
assets/: .gitkeep
docs/: api-settings.md  architecture.md  categorization.md  features.md  index.md  packaging.md  photo-access.md
packaging/: entitlements.plist  make_icon.sh  photo_bomb.spec  photo_boss.spec
scripts/: build_macos.sh
src/: __init__.py  main.py
src/core/: album_system.py  analysis_engine.py  api_client.py  config.py
src/photo_bomb/: __init__.py  __main__.py  main.py
src/photo_bomb/assets/: __init__.py
src/photo_bomb/assets/icons/: README.md
src/photo_bomb/core/: categorization.py  config.py  photos_library.py
src/photo_bomb/ui/: album_sidebar.py  api_settings_dialog.py  main_window.py  photo_grid.py
src/photo_bomb/utils/: __init__.py  helpers.py  resources.py
src/photo_boss/: __init__.py  __main__.py  main.py
src/photo_boss/core/: config.py
src/photo_boss/ui/: api_settings_dialog.py  main_window.py
src/photo_boss/utils/: __init__.py  helpers.py  resources.py
src/ui/: api_settings_dialog.py  batch_analysis_dialog.py  category_badge.py  main_window.py  photo_grid.py
src/utils/: __init__.py  helpers.py
