[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-boss"
version = "0.1.0"
description = "PyQt6 application for macOS to filter and organize the Photos library using vision language models"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Photo Boss Team" },
]
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.5.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "pyobjc>=10.0; platform_system=='Darwin'",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.6",
]

[project.scripts]
photo-boss = "photo_boss.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/photo-boss"
Issues = "https://github.com/yourusername/photo-boss/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["photo_boss*"]

[tool.setuptools.package-data]
"photo_boss.assets" = ["**/*"]
