[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-bomb"
version = "0.1.0"
description = "PyQt6 application for macOS to filter and organize the Photos library using vision language models"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Photo Bomb Team" },
]
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.5.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "pyobjc>=10.0; platform_system=='Darwin'",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.6",
]

[project.scripts]
photo-bomb = "photo_bomb.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/photo-bomb"
Issues = "https://github.com/yourusername/photo-bomb/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["photo_bomb*"]

[tool.setuptools.package-data]
"photo_bomb.assets" = ["**/*"]
